Extract JumpController to its own class and support low and high gravity during jumps

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="./js/actor.js"></script>
     <script src="./js/solid.js"></script>
     <script src="./js/movingPlatform.js"></script>
+    <script src="./js/jumpController.js"></script>
     <script src="./js/playerState.js"></script>
     <script src="./js/room.js"></script>
     <script src="./js/worldMap.js"></script>
