Add attack controller

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <canvas width="1280" height="720" id="canvas"></canvas>
 
     <script src="./js/math.js"></script>
+    <script src="./js/inputController.js"></script>
     <script src="./js/actor.js"></script>
     <script src="./js/solid.js"></script>
     <script src="./js/movingPlatform.js"></script>
