--- a/index.html
+++ b/index.html
@@ -20,14 +20,14 @@
 <body>
     <canvas width="1280" height="720" id="canvas"></canvas>
 
-    <script src="./js/math.js"></script>
-    <script src="./js/inputController.js"></script>
-    <script src="./js/actor.js"></script>
-    <script src="./js/solid.js"></script>
-    <script src="./js/movingPlatform.js"></script>
-    <script src="./js/jumpController.js"></script>
-    <script src="./js/playerState.js"></script>
-    <script src="./js/room.js"></script>
+    <script src="./js/core/math.js"></script>
+    <script src="./js/core/actor.js"></script>
+    <script src="./js/core/solid.js"></script>
+    <script src="./js/player/inputController.js"></script>
+    <script src="./js/player/jumpController.js"></script>
+    <script src="./js/player/playerState.js"></script>
+    <script src="./js/room/movingPlatform.js"></script>
+    <script src="./js/room/room.js"></script>
     <script src="./js/worldMap.js"></script>
     <script src="./js/caveWorld.js"></script>
     <script src="./js/main.js"></script>
