Attack managed by attack class

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     <script src="./js/player/inputController.js"></script>
     <script src="./js/player/jumpController.js"></script>
     <script src="./js/player/playerState.js"></script>
+    <script src="./js/player/attack.js"></script>
     <script src="./js/room/movingPlatform.js"></script>
     <script src="./js/room/room.js"></script>
     <script src="./js/worldMap.js"></script>
