Add basic moving enemy

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     <script src="./js/player/attack.js"></script>
     <script src="./js/room/movingPlatform.js"></script>
     <script src="./js/room/room.js"></script>
+    <script src="./js/room/enemy.js"></script>
     <script src="./js/worldMap.js"></script>
     <script src="./js/caveWorld.js"></script>
     <script src="./js/main.js"></script>
