Add world map displaying rooms

--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
     <div>A, D to move left and right.</div>
     <div>Space to jump, S to drop through platforms.</div>
     <div>J to swing sword.</div>
+    <div>Tab to open map.</div>
 
     <script src="./js/core/math.js"></script>
+    <script src="./js/core/latch.js"></script>
     <script src="./js/core/actor.js"></script>
     <script src="./js/core/solid.js"></script>
     <script src="./js/player/inputController.js"></script>
@@ -35,6 +37,7 @@
     <script src="./js/player/attack.js"></script>
     <script src="./js/room/movingPlatform.js"></script>
     <script src="./js/room/room.js"></script>
+    <script src="./js/room/room-utils.js"></script>
     <script src="./js/room/enemy.js"></script>
     <script src="./js/worldMap.js"></script>
     <script src="./js/caveWorld.js"></script>
