Add walking enemy

--- a/index.html
+++ b/index.html
@@ -38,7 +38,8 @@
     <script src="./js/room/movingPlatform.js"></script>
     <script src="./js/room/room.js"></script>
     <script src="./js/room/room-utils.js"></script>
-    <script src="./js/room/enemy.js"></script>
+    <script src="./js/room/enemy/enemy.js"></script>
+    <script src="./js/room/enemy/walker.js"></script>
     <script src="./js/worldMap.js"></script>
     <script src="./js/caveWorld.js"></script>
     <script src="./js/main.js"></script>
