--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
     <script src="./js/player/attack.js"></script>
     <script src="./js/room/movingPlatform.js"></script>
     <script src="./js/room/room.js"></script>
+    <script src="./js/room/layouts/l_room.js"></script>
     <script src="./js/room/room-utils.js"></script>
     <script src="./js/room/enemy/enemy.js"></script>
     <script src="./js/room/enemy/walker.js"></script>
