Add H and T room

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
     <script src="./js/player/attack.js"></script>
     <script src="./js/room/movingPlatform.js"></script>
     <script src="./js/room/room.js"></script>
+    <script src="./js/room/layouts/h_room.js"></script>
     <script src="./js/room/layouts/l_room.js"></script>
+    <script src="./js/room/layouts/t_room.js"></script>
     <script src="./js/room/room-utils.js"></script>
     <script src="./js/room/enemy/enemy.js"></script>
     <script src="./js/room/enemy/walker.js"></script>
