Add enemies to T room, and Pit room as location for new enemy

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
     <script src="./js/room/layouts/h_room.js"></script>
     <script src="./js/room/layouts/l_room.js"></script>
     <script src="./js/room/layouts/t_room.js"></script>
+    <script src="./js/room/layouts/pit_room.js"></script>
     <script src="./js/room/room-utils.js"></script>
     <script src="./js/room/enemy/enemy.js"></script>
     <script src="./js/room/enemy/walker.js"></script>
