--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <script src="./js/core/latch.js"></script>
     <script src="./js/core/actor.js"></script>
     <script src="./js/core/solid.js"></script>
+    <script src="./js/core/sprite.js"></script>
     <script src="./js/player/inputController.js"></script>
     <script src="./js/player/jumpController.js"></script>
     <script src="./js/player/playerState.js"></script>
@@ -44,6 +45,7 @@
     <script src="./js/room/room-utils.js"></script>
     <script src="./js/room/enemy/enemy.js"></script>
     <script src="./js/room/enemy/walker.js"></script>
+    <script src="./js/room/enemy/bosses/spit-boss.js"></script>
     <script src="./js/worldMap.js"></script>
     <script src="./js/caveWorld.js"></script>
     <script src="./js/main.js"></script>
