Add basic particles

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
     <script src="./js/player/attack.js"></script>
     <script src="./js/room/movingPlatform.js"></script>
     <script src="./js/room/room.js"></script>
+    <script src="./js/room/particle.js"></script>
     <script src="./js/room/layouts/h_room.js"></script>
     <script src="./js/room/layouts/l_room.js"></script>
     <script src="./js/room/layouts/t_room.js"></script>
