--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <script src="./js/room/movingPlatform.js"></script>
     <script src="./js/room/room.js"></script>
     <script src="./js/room/particle.js"></script>
+    <script src="./js/room/layouts/ghost_room.js"></script>
     <script src="./js/room/layouts/h_room.js"></script>
     <script src="./js/room/layouts/l_room.js"></script>
     <script src="./js/room/layouts/t_room.js"></script>
@@ -46,6 +47,7 @@
     <script src="./js/room/room-utils.js"></script>
     <script src="./js/room/enemy/enemy.js"></script>
     <script src="./js/room/enemy/walker.js"></script>
+    <script src="./js/room/enemy/bosses/ghost-boss.js"></script>
     <script src="./js/room/enemy/bosses/spit-boss.js"></script>
     <script src="./js/worldMap.js"></script>
     <script src="./js/caveWorld.js"></script>
