--- a/index.html
+++ b/index.html
@@ -27,31 +27,7 @@
     <div>J to swing sword.</div>
     <div>Tab to open map.</div>
 
-    <script src="./js/core/math.js"></script>
-    <script src="./js/core/latch.js"></script>
-    <script src="./js/core/actor.js"></script>
-    <script src="./js/core/solid.js"></script>
-    <script src="./js/core/sprite.js"></script>
-    <script src="./js/player/inputController.js"></script>
-    <script src="./js/player/jumpController.js"></script>
-    <script src="./js/player/playerState.js"></script>
-    <script src="./js/player/attack.js"></script>
-    <script src="./js/room/movingPlatform.js"></script>
-    <script src="./js/room/room.js"></script>
-    <script src="./js/room/particle.js"></script>
-    <script src="./js/room/layouts/ghost_room.js"></script>
-    <script src="./js/room/layouts/h_room.js"></script>
-    <script src="./js/room/layouts/l_room.js"></script>
-    <script src="./js/room/layouts/t_room.js"></script>
-    <script src="./js/room/layouts/pit_room.js"></script>
-    <script src="./js/room/room-utils.js"></script>
-    <script src="./js/room/enemy/enemy.js"></script>
-    <script src="./js/room/enemy/walker.js"></script>
-    <script src="./js/room/enemy/bosses/ghost-boss.js"></script>
-    <script src="./js/room/enemy/bosses/spit-boss.js"></script>
-    <script src="./js/worldMap.js"></script>
-    <script src="./js/caveWorld.js"></script>
-    <script src="./js/main.js"></script>
+    <script src="./build/index.js"></script>
 </body>
 
 </html>
